Fixed some alignments

--- a/src/styles/TemperatureChart.css
+++ b/src/styles/TemperatureChart.css
@@ -4,6 +4,8 @@
   height: auto;
   margin: 0 auto; 
   overflow: hidden;
+  margin-left: -2rem;
+
 }
 
   .chart-svg {
